# sigrok-firmware-fx2lafw

./: .gitignore  HACKING  Makefile  Makefile.am  Makefile.include  NEWS  README  autogen.sh  configure.ac  debug.c  debug.h  dscr.a51  fx2lafw.c  fx2lafw.h  fx2lafw.mk  gpif-acquisition.c  hantek_6022be.c  hantek_6022bl.c  sainsmart_dds120.c
cwav-usbeeax/: Makefile  main.c
fx2lib/: .gitignore  Makefile  Makefile.am
fx2lib/examples/bulkloop/: dscr.a51
fx2lib/examples/eeprom/firmware/: dscr.a51
fx2lib/fw/: dscr.a51  fw.c
fx2lib/include/: Makefile.am  autovector.h  delay.h  eputils.h  fx2ints.h  fx2macros.h  fx2regs.h  fx2types.h  gpif.h  i2c.h  lights.h  serial.h  setupdat.h
fx2lib/lib/: Makefile  Makefile.am  delay.c  eputils.c  fx2.mk  gpif.c  i2c.c  int4av.a51  serial.c  setupdat.c  usbav.a51
fx2lib/lib/interrupts/: Makefile.am  ep0ack_isr.c  ep0in_isr.c  ep0out_isr.c  ep0ping_isr.c  ep1in_isr.c  ep1out_isr.c  ep1ping_isr.c  ep2_isr.c  ep2ef_isr.c  ep2ff_isr.c  ep2isoerr_isr.c  ep2pf_isr.c  ep2ping_isr.c  ep4_isr.c  ep4ef_isr.c  ep4ff_isr.c  ep4isoerr_isr.c  ep4pf_isr.c  ep4ping_isr.c  ep6_isr.c  ep6ef_isr.c  ep6ff_isr.c  ep6isoerr_isr.c  ep6pf_isr.c  ep6ping_isr.c  ep8_isr.c  ep8ef_isr.c  ep8ff_isr.c  ep8isoerr_isr.c  ep8pf_isr.c  ep8ping_isr.c  errlimit_isr.c  gpifdone_isr.c  gpifwf_isr.c  hispeed_isr.c  ibn_isr.c  sof_isr.c  spare_isr.c  sudav_isr.c  (+3 more)
hw/: Makefile.am  Makefile.inc
hw/braintechnology-usb-lps/: Makefile  Makefile.am  dscr.a51
hw/cwav-usbeeax/: Makefile  Makefile.am  dscr.a51
hw/cwav-usbeedx/: Makefile  Makefile.am  dscr.a51
hw/cwav-usbeesx/: Makefile  Makefile.am  dscr.a51  main.c
hw/cwav-usbeezx/: dscr.a51
hw/cypress-fx2/: Makefile  Makefile.am  dscr.a51
hw/hantek-6022be/: dscr.a51  fw.c
hw/hantek-6022bl/: dscr.a51  fw.c
hw/hantek-pso2020/: dscr.a51  fw.c
hw/instrustar-isds205b/: dscr.a51  fw.c
hw/sainsmart-dds120/: dscr.a51  fw.c
hw/saleae-logic/: Makefile  Makefile.am  dscr.a51  main.c
hw/sigrok-fx2-16ch/: Makefile.am  dscr.a51
hw/sigrok-fx2-8ch/: Makefile.am  dscr.a51
hw/yixingdianzi-mdso/: dscr.a51  fw.c
include/: Makefile.am  command.h  common.inc  debug.h  dscr.inc  dscr_hantek_6022be.inc  dscr_scope.inc  fx2lafw.h  gpif-acquisition.h  scope.inc
saleae-logic/: Makefile  dscr.a51
tools/: debug.py
